--- a/assignment-001-cssgrid-layout/style.css
+++ b/assignment-001-cssgrid-layout/style.css
@@ -18,23 +18,44 @@
 nav{
     background-color:#fe8515 ;
     grid-area: nav;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .leftsidebar{
     background-color: #7fc242;
     grid-area: leftsidebar;
     border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 main{
     background-color:#8bf10a ;
     grid-area: main;
-    border-radius: 10px;
+    border-radius: 10px;display: flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+
 .rightsidebar{
     background-color: #7fc242;
     grid-area: rightsidebar;
     border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+
 }
 footer{
     background-color: #f57e20;
     grid-area: footer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
